--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@ footer a:hover { text-decoration:underline; }
 
         <div class="requirement-item">
           <div class="requirement-icon">✓</div>
+          <div class="requirement-text">Wajib Baca semua ketentuan yang berlaku, agar tidak tidak ada dracin atau drakor dikemudian hari, jika sudah merasa yakin silahkan lanjutkan pendaftara, jika tidak yakin bisa batalkan pendaftaran agency.</div>
+        </div>
+
+        <div class="requirement-item">
+          <div class="requirement-icon">✓</div>
           <div class="requirement-text">Pendaftaran 100% Gratis dan tidak ada biaya apapun sama sekali.</div>
         </div>
 
